# project-team

./: .gitignore  project_blueprint_template.md
Templates/: Architecture.md-template  phase-plan.md-template  product_requirements.md-template
projectteam/: .gitignore  README.md  pyproject.toml
projectteam/knowledge/: README.md  ai-stack-playbook.md  api-design-cookbook.md  architecture-assembly-rubric.md  data-modeling-cookbook.md  infra-resilience-defaults.md  mermaid-diagram-standards.md  security-threat-checklist.md
projectteam/knowledge/external-skills/: api-design-patterns.md  database-migration-patterns.md  deployment-patterns.md  security-review-checklist.md
projectteam/output/: architecture.md  architecture_reviewed.md  product_requirements.md  project_plan.md
projectteam/src/projectteam/: crew.py  main.py
projectteam/src/projectteam/config/: agents.yaml  tasks.yaml
