[project]
name = "projectteam"
version = "0.1.0"
description = "ProjectTeam using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
projectteam = "projectteam.main:run"
run_crew = "projectteam.main:run"
train = "projectteam.main:train"
replay = "projectteam.main:replay"
test = "projectteam.main:test"
run_with_trigger = "projectteam.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
